--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
-google-calendar = "0.5.0"
-serde = "1.0.164"
+serde =  { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.28.2", features = ["full"] }
 toml = "0.7.5"
+reqwest = "0.11"
