--- a/crates/unterstutzen/Cargo.toml
+++ b/crates/unterstutzen/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "americano"
+name = "unterstutzen"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,4 +12,3 @@ serde_json = "1.0"
 tokio = { version = "1.28.2", features = ["full"] }
 toml = "0.7.5"
 reqwest = "0.11"
-unterstutzen = { path = "crates/unterstutzen" }
