--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ tokio = { version = "1.28.2", features = ["full"] }
 toml = "0.7.5"
 reqwest = "0.11"
 unterstutzen = { path = "crates/unterstutzen" }
-americano_web = { path = "crates/americano_web" }
+#americano_web = { path = "crates/americano_web" }
