--- a/crates/americano_web/Cargo.toml
+++ b/crates/americano_web/Cargo.toml
@@ -2,8 +2,10 @@
 name = "americano_web"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 leptos = "0.3.1"
+unterstutzen = { path = "../unterstutzen" }
