--- a/crates/americano_web/Cargo.toml
+++ b/crates/americano_web/Cargo.toml
@@ -7,5 +7,6 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
 leptos = "0.3.1"
 unterstutzen = { path = "../unterstutzen" }
