--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ tokio = { version = "1.28.2", features = ["full"] }
 toml = "0.7.5"
 reqwest = "0.11"
 unterstutzen = { path = "crates/unterstutzen" }
+web-sys = "0.3.64"
 #americano_web = { path = "crates/americano_web" }
