--- a/crates/americano_web/Cargo.toml
+++ b/crates/americano_web/Cargo.toml
@@ -10,3 +10,10 @@ resolver = "2"
 anyhow = "1.0.71"
 leptos = "0.3.1"
 unterstutzen = { path = "../unterstutzen" }
+web-sys = "0.3.64"
+console_error_panic_hook = "0.1.7"
+console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
+log = "0.4.17"
+
+[profile.release]
+debug = true
