--- a/crates/unterstutzen/Cargo.toml
+++ b/crates/unterstutzen/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0"
 tokio = { version = "1.28.2", features = ["sync","rt"] }
 toml = "0.7.5"
 reqwest = "0.11"
+thiserror = "1.0.43"
