--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 axum = "0.6.20"
 tokio = { version = "1.32.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.17"
+tower-http = { version = "0.4.4", features = ["trace"] }
