--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
 tower-http = { version = "0.4.4", features = ["trace"] }
+unterstutzen = { path = "crates/unterstutzen" }
