--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
 tower-http = { version = "0.4.4", features = ["trace"] }
 unterstutzen = { path = "crates/unterstutzen" }
+serde =  { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0"
