Add a date range to the Google Calendar API query

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.3"
+chrono = "0.4.34"
 serde = "1.0.197"
 shuttle-axum = "0.40.0"
 shuttle-runtime = "0.40.0"
@@ -12,3 +13,4 @@ tokio = "1.28.2"
 tower-http = { version = "0.5.2", features = ["fs"] }
 tracing = "0.1.40"
 unterstutzen = { version = "0.1.0", path = "crates/unterstutzen" }
+
