--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ chrono = "0.4.34"
 serde = "1.0.197"
 shuttle-axum = "0.40.0"
 shuttle-runtime = "0.40.0"
+shuttle-secrets = "0.40.0"
 tokio = "1.28.2"
 tower-http = { version = "0.5.2", features = ["fs"] }
 tracing = "0.1.40"
