--- a/crates/unterstutzen/Cargo.toml
+++ b/crates/unterstutzen/Cargo.toml
@@ -17,4 +17,7 @@ tracing = "0.1.40"
 reqwest = "0.11"
 thiserror = "1.0.43"
 urlencoding = "2.1.3"
+mail-parser = "0.9.2"
+ics = "0.5.8"
+icalendar = "0.16.0"
 
