--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 axum = "0.7.3"
 chrono = "0.4.34"
+mail-parser = "0.9.2"
 serde = "1.0.197"
 shuttle-axum = "0.40.0"
 shuttle-runtime = "0.40.0"
