replace ASDF with builtin installer

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Install asdf & tools
-        uses: asdf-vm/actions/install@v3
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - run: npm install -g ember-cli
       - run: cd frontend-ember; ember build
       - uses: shuttle-hq/deploy-action@main
