--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 20
       - run: npm install -g ember-cli
-      - run: cd frontend-ember; ember build
+      - run: cd frontend-ember; npm install; ember build
       - uses: shuttle-hq/deploy-action@main
         with:
           deploy-key: ${{ secrets.SHUTTLE_API_KEY }}
