--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.3"
-chrono = "0.4.34"
+axum = { version = "0.7.3", features = ["multipart", "macros"] }
+chrono = { version = "0.4.34", features = ["clock"] }
 mail-parser = "0.9.2"
 serde = "1.0.197"
 shuttle-axum = "0.40.0"
 shuttle-runtime = "0.40.0"
 shuttle-secrets = "0.40.0"
 tokio = "1.28.2"
-tower-http = { version = "0.5.2", features = ["fs"] }
+tower-http = { version = "0.5.2", features = ["fs", "cors"] }
 tracing = "0.1.40"
 unterstutzen = { version = "0.1.0", path = "crates/unterstutzen" }
+oauth2 = "4.4.2"
+axum-extra = { version = "0.9.2", features = ["cookie-private"] }
+anyhow = "1.0.81"
+thiserror = "1.0.58"
+shuttle-metadata = "0.41.0"
 
+[package.metadata.shuttle.dev]
+env = { GITHUB_CALLBACK_URL = "http://localhost:3000/auth/github/callback" }
