--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ axum-extra = { version = "0.9.2", features = ["cookie-private"] }
 anyhow = "1.0.81"
 thiserror = "1.0.58"
 shuttle-metadata = "0.41.0"
-async-session = "3.0.0"
+tower-sessions = "0.11.0"
+tower = "0.4.13"
+time = "0.3.34"
+
 
 
