--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ shuttle-metadata = "0.41.0"
 tower-sessions = "0.11.0"
 tower = "0.4.13"
 time = "0.3.34"
+reqwest = { version = "0.11.26", features = ["json"] }
+serde_json = "1.0.114"
 
 
 
