--- a/crates/unterstutzen/Cargo.toml
+++ b/crates/unterstutzen/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.7.3", features = ["multipart", "macros"] }
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 chrono = "0.4.34"
 serde =  { version = "1.0.164", features = ["derive"] }
@@ -20,7 +21,8 @@ urlencoding = "2.1.3"
 mail-parser = "0.9.2"
 ics = "0.5.8"
 icalendar = "0.16.0"
-
+tower-sessions = "0.11.0"
+oauth2 = "4.4.2"
 
 [dev-dependencies]
 expect-test = "1.4.1"
