--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,26 +5,30 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.3", features = ["multipart", "macros"] }
+axum-extra = { version = "0.9.2", features = ["cookie-private"] }
+anyhow = { version = "1.0.71", features = ["backtrace"] }
 chrono = { version = "0.4.34", features = ["clock"] }
+icalendar = "0.16.0"
+ics = "0.5.8"
 mail-parser = "0.9.2"
-serde = "1.0.197"
+oauth2 = "4.4.2"
+reqwest = { version = "0.11.26", features = ["json"] }
+serde =  { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0"
 shuttle-axum = "0.40.0"
+shuttle-metadata = "0.41.0"
 shuttle-runtime = "0.40.0"
 shuttle-secrets = "0.40.0"
-tokio = "1.28.2"
-tower-http = { version = "0.5.2", features = ["fs", "cors"] }
-tracing = "0.1.40"
-unterstutzen = { version = "0.1.0", path = "crates/unterstutzen" }
-oauth2 = "4.4.2"
-axum-extra = { version = "0.9.2", features = ["cookie-private"] }
-anyhow = "1.0.81"
 thiserror = "1.0.58"
-shuttle-metadata = "0.41.0"
-tower-sessions = "0.11.0"
-tower = "0.4.13"
 time = "0.3.34"
-reqwest = { version = "0.11.26", features = ["json"] }
-serde_json = "1.0.114"
+tokio = "1.28.2"
+toml = "0.7.5"
+tower = "0.4.13"
+tower-http = { version = "0.5.2", features = ["fs", "cors"] }
+tower-sessions = "0.11.0"
+tracing = "0.1.40"
+urlencoding = "2.1.3"
 
-
+[dev-dependencies]
+expect-test = "1.4.1"
 
